0.6.10 (2012-11-27)
-------------------

  Fixed a bug where an exception could be raised when escaping certain
  attribute or cdata values.  This was caused by meld3 trying to use
  _encode_entity from xml.etree without importing it first.  Thanks to
  Jorge Puente Sarrin for contributing the patch.

0.6.9 (2012-09-12)
------------------

  Fixed a test failure that only occurred on some builds of
  Python 2.7 where parsing an unknown entity could raise
  an expat.error instead of SyntaxError.

0.6.8 (2012-01-12)
------------------

  Added the C extension source (cmeld3.c) to the release package
  by including it in MANIFEST.in.  Thanks to Soren Hansen for
  noticing it was missing from prior releases.

  Running setup.py will now halt on error if a compatible version
  of Python is not detected.

0.6.7 (2010-08-04)
------------------

  Make compatible with Python 2.7 (patch kindly contributed by
  Jonathan Riboux).

0.6.6 (2009-09-30)
------------------

  Change download location.  This really should be a setuptools
  package so we can upload it to PyPI.  No functionality changes.

0.6.5 (2008-07-21)
------------------

  Apply patch for Python 2.5 compatibility from both
  Toshio and Anders.

  Create distro tarball via:

   rm MANIFEST
   USE_MELD3_EXTENSION_MODULES=1 python setup.py sdist

  .. in order to get the cmeld3.c file in the distribution.

0.6.4 (2008-01-17)
------------------

  Make the default build use the Python-based meld "helper" instead of
  the C-based one.  Since the primary consumer of meld3 (as far as I
  know) is "supervisor", and since the typical supervisor consumer is
  likely not to have a C compiler and Python development libraries on
  his system, it makes more sense for the default build not to compile
  the C extensions.  However, if the environment variable
  "USE_MELD3_EXTENSION_MODULES" is set when "setup.py install" is
  invoked, the C extensions will be built.  meld3 is much slower