@@ -1,2 +1,1 @@
 include *.txt
-include meld3/*.c
