@@ -9,14 +9,6 @@ if sys.version_info[:2] < (2, 3) or sys.version_info[0] > 2:
     sys.stderr.write(msg)
     sys.exit(1)
 
-if os.environ.get('USE_MELD3_EXTENSION_MODULES'):
-    ext_modules=[Extension("meld3/cmeld3",
-                           ["meld3/cmeld3.c"])]
-else:
-    # by default, allow people to install meld3 without building the
-    # extension modules (meld works fine without them, it's just slower).
-    ext_modules = []
-
 CLASSIFIERS = [
     'Development Status :: 5 - Production/Stable',
     'Environment :: Web Environment',
@@ -37,6 +29,5 @@ setup(
     maintainer_email = "mike@naberezny.com",
     license='ZPL 2.1',
     packages=['meld3'],
-    url='https://github.com/supervisor/meld3',
-    ext_modules=ext_modules,
+    url='https://github.com/supervisor/meld3'
 )
